# xy_django_app_api_auth

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/source/Runner/Admin/: db.sqlite3
samples/xy_web_server_demo/source/Runner/Admin/xy_web_server_demo/: settings.py
xy_django_app_api_auth/: abstracts.py  admin.py  apps.py  models.py  serializers.py
xy_django_app_api_auth/migrations/: __init__.py
